Remove activity scoping, cleanup, and add base integration tests